--- a/Frontend/styles/index.css
+++ b/Frontend/styles/index.css
@@ -144,12 +144,19 @@ body {
 
 .nav-menu a{
     text-decoration: none;
+    /* border: 2px solid red; */
+    margin: 0;
+    font-size: 15px;
+    color: black;
+
 }
 
 .nav-menu {
     /* border: 2px solid red; */
     /* width: 100%; */
     justify-content: space-between;
+    padding: 10px;
+    /* width: 45%; */
 
 }
 
@@ -157,6 +164,12 @@ body {
    /* border: 2px solid red; */
    /* margin-left: 50px; */
 
+}
+
+.image {
+  /* border: 2px solid red; */
+  width: 200px;
+  
 }
 .sign-in a {
     text-decoration: none;
@@ -174,6 +187,7 @@ body {
    margin: auto;
    background-color: #eee;
    display: flex;
+   border-radius: 20px;
 }
 
 .mid-1 {
@@ -183,6 +197,23 @@ body {
     height: 70vh;
 }
 
+.mid-1 h1 {
+  font-size: 45px;
+  text-align: center;
+  width: 90%;
+  margin: auto;
+  padding-top: 80px;
+
+}
+
+.mid-1 h2 {
+  font-size: 17px;
+  line-height: 1.25em;
+  /* border: 2px solid red; */
+  width: 80%;
+  margin:auto;
+  padding-top: 20px;
+}
 .mid-1 a {
     text-decoration: none;
 }
@@ -195,29 +226,33 @@ body {
     color: transparent;
 }
 .mid-1 button {
-    width: 150px;
-    height: 40px;
+    width: 180px;
+    height: 50px;
     color: #fff;
     background-color: #0078ca;
-
     box-sizing: border-box;
     border: 1px solid transparent;
     border-radius: 100px;
     cursor: pointer;
-    
     font-size: 16px;
     font-weight: 600;
     line-height: 24px;
     position: relative;
-    text-align: center;
+    /* text-align: center; */
+    /* align-items: center; */
+    margin-left: 50px;
     text-decoration: none;
     word-wrap: break-word;
-   
     font-size: inherit;
-   
+    margin-top: 35px;
     font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
 }
 
+.last {
+  margin-top: 20px;
+  /* border: 2px solid red; */
+  margin-left: 50px;
+}
 .mid-2{
     /* border: 2px solid red; */
     width: 60%;
@@ -236,6 +271,7 @@ body {
  text-align: center;
  font-size: 40px;
  font-weight: 700;
+ margin-top: 60px;
  letter-spacing: normal;
  line-height: 1.35714em;
  margin-bottom: 0.71429em;
@@ -249,20 +285,123 @@ body {
 #mid-third {
   display: grid;
   grid-template-columns: repeat(4,1fr);
+  gap: 15px;
   width: 90%;
-  /* border: 2px solidl blue; */
+  /* border: 2px solid blue; */
+  margin: auto;
 }
 
 #mid-third div {
   /* border: 2px solid red; */
+  /* padding: 0; */
+  height: 80vh;
   /* text-align: center; */
-  margin: auto;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 5px;
 }
 
 #mid-third div img {
-  width: 330px;
+  width: 100%;
   margin: auto;
   border-radius: 10px;
+}
+
+#mid-third div h3 {
+  /* border: 2px solid red; */
+  width: 75%;
+  margin: auto;
+  font-size: 22px;
+}
+
+#mid-third div p {
+  /* border: 2px solid red; */
+  width: 75%;
+  margin: auto;
+  font-size: 20px;
+}
+
+#mid-third div a {
+  /* border: 2px solid blue; */
+  margin-left: 40px;
+  color: #0e78c8;
+  margin-bottom: 1.375rem;
+  margin-bottom: 0;
+  font-size: 1.125em;
+  font-weight: 400;
+  letter-spacing: -.3px;
+  line-height: 1.33333em;
+  margin-bottom: 1.66667em;
+}
+
+
+/* footer-part-start */
+
+#footer {
+  justify-content: space-between;
+  /* border: 2px solid red; */
+  width: 80%;
+  text-align: center;
+  margin-left: 100px;
+  height: 50vh;
+}
+#footer-part {
+  margin-top: 50px;
+  /* border: 2px solid black; */
+  width: 100%;
+  background-color: #eee;
+  color: black;
+  /* line-height: 10px; */
+}
+
+#footer td {
+  font-size: 12px;
+  cursor: pointer;
+}
+/* footer-part-end */
+
+#footer-last {
+  background-color: #eee;
+  /* border: 3px solid red; */
+  /* display: inline; */
+  justify-content: space-around;
+  width: 100%;
+  /* margin-top: 20px; */
+}
+
+
+#footer-last ul {
+  list-style: none;
+  /* margin-left: 150px; */
+  padding: 0;
+  margin: 0 0 0 340px;
+  /* background-color: #333; */
+  /* border: 2px solid red; */
+
+}
+
+#footer-last ul li {
+  display: inline-block;
+  position: relative;
+  /* margin-right: 20px; */
+ /* border: 2px solid red; */
+
+}
+
+#footer-last ul li a {
+  display: block;
+  /* color: #fff; */
+  text-decoration: none;
+  /* border: 2px solid red; */
+  padding-right: 50px;
+  padding: 6px;
+}
+
+#footer-last ul li:hover > ul {
+  display: block;
+}
+
+#footer-last p {
+  color: black;
+  font-size: 12px;
+  margin-right: 30px;
 }
