--- a/Frontend/styles/chat.css
+++ b/Frontend/styles/chat.css
@@ -1,67 +1,245 @@
+
+
+
+*{
+    padding: 0px;
+    margin: 0px;
+}
 body{
-    background-image:linear-gradient(rgb(255,255,255),rgb(183, 35, 183));
+    font-family: sans-serif;
+    background-color: #FAFAFA;
+    background-image: linear-gradient(rgb(255,255,255),rgb(80, 144, 248));
     height: 100vh;
 }
 
-.logo {
-    display: block;
+#logo{
+    width: 15%;
     margin: auto;
-    width: 150px;
-    height: 50px;
+
+}
+#logo img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+h1{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
-.container {
-    max-width: 955px;
-    border: 2px solid black;
+#main{
+    width: 85%;
+    display: flex;
     margin: auto;
-    height: 60vh;
-    padding: 33px;
-    overflow-y: auto;
-    margin-bottom: 23px;
+    border-radius: 10px;
+    /* background-color: #266AFA; */
+    background-color: #BBDEFB;
+    padding: 20px;
+    height: 70vh;
 }
 
-.message {
-    background-color: rgb(180, 177, 177);
-    width: 24%;
-    padding: 10px;
-    margin: 17px 12px;
-    border: 2px solid black;
+#room-user{
+    width: 30%;
+}
+
+#room{
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    background-color: #0288D1;
+    color: #ffffff;
+}
+
+#room-name{
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+#user-online{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
     border-radius: 10px;
 }
 
-.left {
-    float: left;
-    clear: both;
+#user-heading{
+    height: 40px;
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 500;
+    justify-content: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color: #0288D1;
+    color: #ffffff;
 }
 
-.right {
-    float: right;
-    clear: both;
+#members{
+    overflow-y: scroll;
+    padding: 10px;
+    padding-top: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #ffffff;
+}
+#members > div{
+    width: 95%;
+    height: 35px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    background-color: #9CCC65;
+    color: #ffffff;
 }
 
-.center {
-    margin: auto;
-    clear: both;
-}
-
-#send-container{
-    display: block;
-    margin: auto;
-    text-align: center;
-    max-width: 985px;
+#message-container{
+    margin-left: 30px;
     width: 100%;
-}
-
-#messageInp{
-    width: 92%;
-    border: 2px solid black;
     border-radius: 6px;
-    height: 34px;
+    display: flex;
+    flex-direction: column;
 }
 
-.btn{
+#leave{
+    background-color: #EF5350;
+    padding: 13px;
+    margin-top: 20px;
+    text-align: center;
+    border-radius: 5px;
+    color: #ffffff;
+}
+#leave:hover{
     cursor: pointer;
-    border: 2px solid black;
+    background-color: #E57373;
+}
+
+#msgs{
+    font-family: sans-serif;
+    font-weight: 500;
+    font-size: 30px;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    text-align: center;
+    color: #ffffff;
+    padding: 7px;
+    background-color: #0288D1;
+}
+
+#messages{
+    height: 80%;
+    background-color: #ffffff;
+    overflow-y: scroll;
+    padding: 0px 30px;
+}
+
+#type-message{
+    display: flex;
+    align-items: center;
+    height: 40px;
+    margin-top: auto;
+}
+
+#text{
+    height: 100%;
+    width: 80%;
+    padding: 0px 20px;
+    font-family: sans-serif;
     border-radius: 6px;
-    height: 34px;
+    border: none;
+    outline: none;
+}
+#text:focus{
+    border: 2px solid #0288D1;
+}
+
+#send{
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12%;
+    margin-left: auto;
+    background-color: #0a9fef;
+    color: #ffffff;
+    height: 100%;
+}
+
+#send:hover{
+    cursor: pointer;
+    background-color: #66BB6A;
+}
+
+.message{
+    margin-top: 15px;
+    padding: 10px 30px;
+    background-color: #B39DDB;
+    border-radius: 6px;
+    color: #ffffff;
+}
+
+.meta{
+    margin-bottom: 7px;
+}
+
+@media screen and (max-width: 500px) {
+    h1{
+        font-size: 20px;
+    }
+    #room{
+        padding: 10px 0px;
+    }
+    #user-heading{
+        padding: 10px 0px;
+    }
+    #members{
+        padding: 0px;
+    }
+    #members > div{
+        padding: 10px 0px;
+    }
+    #main{
+        width: 90%;
+        height: fit-content;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: auto;
+    }
+    #leave{
+        padding: 10px 0px;
+    }
+    #main div{
+        width: 100%;
+        height: fit-content;
+    }
+    #type-message{
+        flex-direction: column;
+    }
+    #text{
+        margin: 10px 0px;
+        height: 40px;
+    }
+    #message-container{
+        margin-left: 0px;
+        margin-top: 20px;
+    }
+    #messages{
+        height: 100px;
+        padding: 10px;
+        overflow-y: scroll;
+    }
+    #message-container div{
+        padding: 10px 0px;
+    }
 }
