--- a/Frontend/styles/dashboard.css
+++ b/Frontend/styles/dashboard.css
@@ -415,7 +415,7 @@ body {
 
 @media only screen and (max-width: 768px) {
 
-    #name, #myDropdown, #search, #all-icon, #last-mail, #recent-chats{
+    #name, #myDropdown, #search, #all-icon, #last-mail, #recent-chats, #chat-image-logo{
         display: none;
     }
 
