--- a/Frontend/styles/dashboard.css
+++ b/Frontend/styles/dashboard.css
@@ -31,10 +31,12 @@ body {
 
 #left {
     width: 23%;
-    height: 100vh;
+    margin-top:40px ;
+    height: 600px;
     /* border: 2px solid red; */
     /* display: flex; */
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 10px;
 }
 
 #right {
@@ -160,16 +162,18 @@ body {
 }
 
 #top {
-    padding-top: 40px;
-    padding-left: 200px;
+    margin-top: 40px;
+    /* padding-left: 200px; */
     /* border: 2px solid red; */
-    align-items: center;
+    /* align-items: center; */
+    text-align: center;
 
 }
 
 .notes {
-    margin-top: 35px;
-    margin-left: 100px;
+    /* margin-top: 35px; */
+    /* margin-left: 100px; */
+    text-align: center;
 }
 
 .notes h3 {
@@ -204,12 +208,17 @@ body {
     /* border: 2px solid red; */
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     margin-top: 30px;
+    border-radius: 10px;
 }
 
 .section-2 {
     /* border: 2px solid red; */
     margin-top: 30px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 10px;
+}
+.section-1 img,.section-2 img{
+    border-radius: 10px;
 }
 
 #title {
