--- a/Frontend/styles/login.css
+++ b/Frontend/styles/login.css
@@ -46,15 +46,18 @@
 .form-wrap{
     /* font-family: Arial; */
     width:50%;
-    height: 100%;
+    height: 100%; 
     padding: 20px;
+    /* background-color: #c218ec; */
 }
 .form-wrap .top-signup{
     text-align: right;
     padding-top: 10px;
     font-size: 13px;
     font-weight: 400;
-    color: rgb(155, 152, 152);
+     color: rgb(155, 152, 152); 
+    
+     /* color: black; */
 }
 .form-wrap .signup-btn{
     text-decoration: none;
@@ -150,6 +153,9 @@
 .box-container {
     width: 75%;
     height: 80%;
+}
+#lemail,#lpass{
+    color: black;
 }
 @media only screen and (max-width: 768px) {
 
