--- a/Frontend/styles/dashboard.css
+++ b/Frontend/styles/dashboard.css
@@ -1,437 +1,263 @@
 * {
     margin: 0;
     padding: 0;
+
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background-image: linear-gradient(rgb(255,255,255),#B3E5FC);
-    
+    font-family: sans-serif;
 }
 
-.material-symbols-outlined {
-  /* font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48, */
-  margin-left: 10px;
-  cursor: pointer;
+
+
+/* ========================mainbody =========================*/
+#main_img_info {
+    display: grid;
+    text-decoration: none;
+    height: 80%;
+    /* border: 1px solid green; */
+    grid-template-columns: repeat(2, 1fr);
 }
 
-#example-input {
-    margin-left: 20px;
-}
-
-#main {
-    display: flex;
-    /* border: 2px solid red; */
-    justify-content: space-evenly;
-}
-
-#left {
-    width: 23%;
-    margin-top:40px ;
-    height: 600px;
-    /* border: 2px solid red; */
-    /* display: flex; */
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    border-radius: 10px;
-}
-
-#right {
-    width: 60%;
-    height: 100vh;
-    /* border: 2px solid blue; */
-}
-
-#name {
-    /* border: 2px solid red; */
-    margin-top: 18px;
-    font-size: 12px;
-    padding-left: 20px;
-    color: blue;
-    width: 50%;
-    height: 6%;
-    margin-left: 18px;
-    background-color: rgb(224, 250, 255);
-}
-
-#name p{
-    /* border: 2px solid red; */
-    /* margin-top: 5px; */
-    font-size: 15px;
+/* #ïmg1{
+    border: 1px solid red;
+    } */
+#main_img_info a {
+    text-decoration: none;
     color: black;
-
 }
 
+.img_info {
+    width: 100%;
+    height: 75%;
 
-/* hamburger-menu-start */
-
-#myDropdown {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* border: 2px solid green; */
-    height: 20px;
-    margin-top: -30px;
-    margin-left: 75%;
-    width: 20%;
-    /* display: inline-block; */
-    position: relative;
-    cursor: pointer;
-  }
-  
-
-
-  
-  /* The dropdown menu */
-  #myDropdown .dropdown-menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1;
-    /* align-items: center; */
-  }
-  
-  /* Show the dropdown menu when the container is clicked */
-  #myDropdown.show .dropdown-menu {
-    display: block;
-    /* border: 2px solid red; */
-    width: 83%;
-    margin-top: 7px;
-    align-items: center;
-    margin-left: 10px;
-
-
-  }
-  
-
-
-
-
-  .dot {
-    display: inline-block;
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background-color: #000;
-    margin: 0 2px;
-  }
-  
-
-/* hamburger-menu-end */
-
-
-#search {
-    display: flex;
-    margin-top: 20px;
-    align-items: center;
-    /* justify-content: space-around; */
+    border-radius: 10%;
 }
 
-#search input {
-    width: 200px;
-    height: 30px;
-    border-radius: 6px;
+.img1_main {
+    /* height: 110%; */
+    width: 105%;
 }
 
-#search img {
-    width: 20px;
-    /* border: 2px solid red; */
-  
-}
-
-#top h1 {
-    position: relative;
-    display: inline;
-    flex-grow: 0;
-    flex-shrink: 0;
-    overflow: hidden;
-    white-space: pre-wrap;
-    overflow-wrap: break-word;
-    font-size: 38px;
-    color: rgb(37, 36, 35);
-    font-family: "SF Semilight", "Segoe System UI Semilight", "Segoe UI Semilight", sans-serif;
-    cursor: inherit;
-    font-weight: lighter;
-    /* border: 2px solid red; */
-    /* text-align: center; */
-
-}
-
-#top {
-    margin-top: 40px;
-    /* padding-left: 200px; */
-    /* border: 2px solid red; */
-    /* align-items: center; */
-    text-align: center;
-
-}
-
-.notes {
-    /* margin-top: 35px; */
-    /* margin-left: 100px; */
-    text-align: center;
-}
-
-.notes h3 {
-    position: relative;
-    display: inline;
-    flex-grow: 0;
-    flex-shrink: 0;
-    overflow: hidden;
-    white-space: pre-wrap;
-    overflow-wrap: break-word;
-    font-size: 22px;
-    font-family: "SF Semilight", "Segoe System UI Semilight", "Segoe UI Semilight", sans-serif;
-    color: rgb(37, 36, 35);
-    margin: 10px;
-    cursor: inherit;
-    font-weight: lighter;
-}
-
-.sections {
-    /* border: 2px solid red; */
-    margin-bottom: 80px;    
-    display: flex;
-    height: 65vh;
-    width: 92%;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    gap: 20px;
+.div_img_info {
+    text-decoration: none;
+    width: 78%;
+    height: 70%;
     margin: auto;
+    transition: transform 0.2s;
+    border-radius: 10%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    /* border: 1px solid red; */
 }
 
-.section-1 {
-    /* border: 2px solid red; */
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    margin-top: 30px;
-    border-radius: 10px;
-}
-
-.section-2 {
-    /* border: 2px solid red; */
-    margin-top: 30px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    border-radius: 10px;
-}
-.section-1 img,.section-2 img{
-    border-radius: 10px;
-}
-
-#title {
-    font-weight: bolder;
-    font-size: 18px;
-    text-align: center;
-}
-
-#no-title {
-    /* border: 2px solid red; */
-    width: 70%;
-   text-align: center;
-   /* align-items: center; */
-   margin-top: 20px;
-   padding-left: 60px;
-}
-
-.sections button {
-    width: 35%;
-    height: 38px;
-    border-radius: 10px;
-    /* flex-grow: 0;
-    flex-shrink: 0; */
-    /* overflow: hidden;
-    align-items: stretch; */
-    background: linear-gradient(135deg, rgb(9, 154, 222), rgb(16, 84, 173));
-    /* min-height: 40px; */
-    /* inset: 0px; */
-    color: white;
-    margin-top: 25px;
-    text-align: center;
-   margin-left: 140px;
-   cursor: pointer;
-}
-
-
-#all-icon {
-    /* border: 2px solid red; */
-    width: 80%;
-    height: 50px;
-   margin-left: 20px;
-   margin-top: 10px;
-}
-
-#all-icon p {
-    font-size: 11px;
-    color: rgb(14, 114, 207);
-    font-family: "SF Regular", "Segoe System UI Regular", "Segoe UI Regular", sans-serif;
-    font-weight: bold;
-    margin-left: 10px;
-
-}
-
-#all-icon {
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    
-}
-
-#all-icon span {
-    align-items: center;
-    justify-content: center;
-}
-
-
-/* google-icon-start */
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
-
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
-
-
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
-
-
-/* google-icon-end */
-
-
-#meet-now {
-    /* border: 2px solid red; */
-    width: 80%;
-    height: 50px;
-    margin-left: 20px;
-    margin-top: 10px;
-   
-}
-
-#meet-now button {
-    width: 120px;
-    height: 33px;
-    /* margin: auto; */
-    border-radius: 10px;
-    margin-right: 16px;
-    margin-top: 10px;
-    /* background-color: white; */
-    cursor: pointer;
-    background: linear-gradient(135deg, rgb(9, 154, 222), rgb(16, 84, 173));
-    color: white;
-    border-radius: 10px;
-}
-
-#recent-chats {
-    /* border: 2px solid red; */
-    margin-left: 20px;
-    width: 80%;
-    height: 30px;
-    margin-top: 14px;
-    
-}
-
-#chat-image-logo {
-    /* border: 2px solid red; */
-    height: 55vh;
-    margin-left: 20px;
-    margin-top: 14px;
-}
-
-#chat-image-logo img {
-    width: 170px;
-    margin-top: 15px;
-    margin-left: 60px;
-}
-
-#chat-image-logo h2 {
-    /* position: relative;
-    display: inline;
-    flex-grow: 0;
-    flex-shrink: 0;
-    overflow: hidden;
-    white-space: pre-wrap;
-    overflow-wrap: break-word; */
+.div_img_info p {
     font-size: 22px;
-    font-family: "SF Bold", "Segoe System UI Bold", "Segoe UI Bold", sans-serif;
-    font-weight:bolder;
-    color: rgb(37, 36, 35);
-    margin-top: 20px;
-    margin-bottom: 4px;
+    font-size: bolder;
+    text-decoration: none;
     text-align: center;
-    cursor: inherit;
-    margin-right: 50px;
-
+    padding-top: 6%;
+    padding-bottom: 6%;
 }
 
-#chat-image-logo p {
-    margin-top: 5px;
-    text-align: center;
-    margin-right: 50px;
+.div_img_info:hover {
+    transform: scale(1.1);
 }
 
-#last-mail {
-    /* border: 2px solid red; */
-    width: 80%;
-    height: 90px;    
-    margin-left: 100px;
-    margin-top: 7px;
+#main_dashboard {
+    width: 90%;
+    /* border: 1px solid red; */
+    margin: auto;
+    display: flex;
+    gap: 8%;
+    margin-top: 1%;
+    /* border: 1px solid black; */
 }
 
-#last-mail p {
-    text-align: center;
-    font-size: 18px;
-    font-weight: bolder;
-    /* padding-top: 20px; */
-}
-
-#last-mail span {
-    color: blue;
-}
-
-#last-mail h3 {
-    text-align: center;
-    margin-top: 10px;
-    color: rgb(105, 158, 228);
-}
-
-
-/* media-query-start */
-
-@media only screen and (max-width: 768px) {
-
-    #name, #myDropdown, #search, #all-icon, #last-mail, #recent-chats, #chat-image-logo{
-        display: none;
+@media (max-width: 1075px) {
+    .div_img_info:hover {
+        transform: scale(1.1);
     }
 
-    .sections {
+    .div_img_info p {
+        font-size: 20px;
+        font-size: bolder;
+        text-decoration: none;
+        text-align: center;
+    }
+
+    #main_dashboard {
+        width: 90%;
+        margin: auto;
+        display: flex;
+        gap: 2%;
+        margin-top: 5%;
+        /* border: 1px solid black; */
+    }
+
+    .div_img_info {
+        text-decoration: none;
+        width: 180px;
+        height: 65%;
+        padding-bottom: 4%;
+        margin: auto;
+        transition: transform 0.2s;
+        border-radius: 10%;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+            rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        /* border: 1px solid red; */
+    }
+
+    #main_img_info {
         display: grid;
-        grid-template-columns: repeat(1,1fr);
+        text-decoration: none;
+        gap: 2%;
+        /* border: 1px solid green; */
+        grid-template-columns: repeat(2, 1fr);
     }
-  }
 
-/* media-query-end */
+    .img1_main {
+        width: 90%;
+    }
+}
+
+@media (max-width: 995px) {
+    .div_img_info:hover {
+        transform: scale(1.1);
+    }
+
+    .div_img_info p {
+        font-size: 18px;
+        font-size: bolder;
+        text-decoration: none;
+        text-align: center;
+    }
+
+    #main_dashboard {
+        width: 90%;
+        margin: auto;
+        display: flex;
+        gap: 2%;
+        margin-top: 5%;
+        /* border: 1px solid black; */
+    }
+
+    .div_img_info {
+        text-decoration: none;
+        width: 150px;
+        height: 80%;
+        margin: auto;
+        transition: transform 0.2s;
+        border-radius: 10%;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+            rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        /* border: 1px solid red; */
+    }
+
+    #main_img_info {
+        display: grid;
+        text-decoration: none;
+        gap: 2%;
+        /* border: 1px solid green; */
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .img1_main {
+        height: 350px;
+    }
+}
+
+@media (max-width: 663px) {
+    .div_img_info:hover {
+        transform: scale(1.1);
+    }
+
+    .div_img_info p {
+        font-size: 18px;
+        font-size: bolder;
+        text-decoration: none;
+        text-align: center;
+    }
+
+    #main_dashboard {
+        width: 90%;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 2%;
+        margin-top: 5%;
+        /* border: 1px solid black; */
+    }
+
+    .div_img_info {
+        text-decoration: none;
+        width: 90%;
+        height: 90%;
+        margin: auto;
+        transition: transform 0.2s;
+        border-radius: 10%;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+            rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        /* border: 1px solid red; */
+    }
+
+    #main_img_info {
+        display: grid;
+        text-decoration: none;
+        gap: 2%;
+        /* border: 1px solid green; */
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .img1_main {
+        height: 500px;
+    }
+}
+
+@media (max-width: 378px) {
+    .div_img_info:hover {
+        transform: scale(1.1);
+    }
+
+    .div_img_info p {
+        font-size: 18px;
+        font-size: bolder;
+        text-decoration: none;
+        text-align: center;
+    }
+
+    #main_dashboard {
+        width: 90%;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 2%;
+        margin-top: 5%;
+        /* border: 1px solid black; */
+    }
+
+    .div_img_info {
+        text-decoration: none;
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        transition: transform 0.2s;
+        border-radius: 10%;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+            rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+        /* border: 1px solid red; */
+    }
+
+    #main_img_info {
+        display: grid;
+        text-decoration: none;
+        gap: 2%;
+
+        /* border: 1px solid green; */
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .img1_main {
+        height: 300px;
+    }
+}
